--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,70 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap');
+.header{
+    height: 80px;
+    background: #fff;
+    padding: 20px 0;
+    position: relative;
+}
+
+*{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Titillium Web', sans-serif;
 }
-nav{
+.nav-bar img{
+    height: 20px;
+    position: relative;
+    top: 10px;
+}
+.container{
+    width: 90%;
+    margin: 0 auto;
+}
+.nav-bar{
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
-nav div ul{
+ul{
     display: flex;
+    list-style-type: none;
+    line-height: 35px;
 }
-li{
-    list-style: none;
-    padding: 25px;
+ul li{
+    margin: 0 20px;
+}
+ul li a{
+    position: relative;
+    font-size: 20px;
+    text-decoration: none;
+    color: #000;
+    font-weight: 600;
+}
+ul li a::before{
+    position: absolute;
+    content: "";
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #000;
+    transition: 0.4s transform;
+    bottom: -5px;
+    transform: scaleX(0);
+    transform-origin: right;
+}
+ul li a:hover::before{
+    transform: scaleX(1);
+    transform-origin: left;
+}
+label #btn, label #cancel{
+    position: absolute;
+    top: 50%;
+    right: 30px;
+    font-size: 25px;
+    cursor: pointer;
+    transform: translate(0, -50%);
+    display: none;
+}
+#check{
+    display: none;
 }
