--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,7 +2,7 @@
     label #btn{
         display: inline-block;
     }  
-    ul{
+    #menu{
         position: fixed;
         top: 0;
         right: -100%;
@@ -15,14 +15,14 @@
         z-index: 100;
         transition: 0.5s;
     }
-    ul li{
+    #menu li{
         margin-left: 50px;
     }
-    ul li a{
+    #menu li a{
         font-size: 20px;
         color: #fff;
     }
-    #check:checked ~ ul{
+    #check:checked ~ #menu{
         right: 0;
     }
     #check:checked ~ label #btn{
@@ -32,5 +32,97 @@
         display: block;
         z-index: 101;
         color: #fff;
+    }
+}
+@media(min-width:768px) {
+    .timeline:before {
+        left: 50%;
+    }
+
+    .timeline>li {
+        margin-bottom: 100px;
+        min-height: 100px;
+    }
+
+    .timeline>li .timeline-panel {
+        float: left;
+        width: 41%;
+        padding: 0 20px 20px 30px;
+        text-align: right;
+    }
+
+    .timeline>li .timeline-image {
+        left: 50%;
+        width: 100px;
+        height: 100px;
+        margin-left: -50px;
+    }
+
+    .timeline>li .timeline-image h4 {
+        margin-top: 16px;
+        font-size: 13px;
+        line-height: 18px;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel {
+        float: right;
+        padding: 0 30px 20px 20px;
+        text-align: left;
+    }
+}
+
+@media(min-width:992px) {
+    .timeline>li {
+        min-height: 150px;
+    }
+
+    .timeline>li .timeline-panel {
+        padding: 0 20px 20px;
+    }
+
+    .timeline>li .timeline-image {
+        width: 150px;
+        height: 150px;
+        margin-left: -75px;
+    }
+
+    .timeline>li .timeline-image h4 {
+        margin-top: 30px;
+        font-size: 18px;
+        line-height: 26px;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel {
+        padding: 0 20px 20px;
+    }
+}
+
+@media(min-width:1200px) {
+    .timeline>li {
+        min-height: 170px;
+    }
+
+    .timeline>li .timeline-panel {
+        padding: 0 20px 20px 100px;
+    }
+
+    .timeline>li .timeline-image {
+        width: 170px;
+        height: 170px;
+        margin-left: -85px;
+    }
+
+    .timeline>li .timeline-image h4 {
+        margin-top: 40px;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel {
+        padding: 0 100px 20px 20px;
+    }
+}
+@media (max-width: 767px) {
+    .custom-shape-divider-bottom-1619674691 svg {
+        width: calc(116% + 1.3px);
+        height: 72px;
     }
 }
