--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 }
 
 *{
-    box-sizing: border-box;
+    box-sizing: border-box !important;
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
@@ -31,6 +31,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    overflow: hidden;
 }
 #menu{
     display: flex;
@@ -225,6 +226,7 @@ section h3.section-subheading {
     fill: #FFFFFF;
 }
 
+
 header{
     background: linear-gradient(180deg,rgba(128, 128, 128, 0.356), rgba(128, 128, 128, 0.356), rgba(128, 128, 128, 0.356)), url(../img/bg3.jpg);
     background-origin: border-box;
@@ -272,4 +274,139 @@ p{
     border-radius: 20px;
     font-size: 18px;
     font-weight: bold;
+}
+
+.section-heading{
+    margin-right: 0px !important;
+}
+/* *::before,*::after{
+    box-sizing: border-box;
+} */
+.product{
+    color: white;
+    background-size: cover;
+    padding: 10rem 0 0;
+    max-width: 35ch;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    transition: transform 300ms ease;
+    margin: 20px;
+    box-shadow: 1px 5px 5px 1px #80808094;
+}
+.product:hover{
+    box-shadow: 1px 7px 7px 5px #80808094;
+    transition: 0.5s;
+}
+.milk{
+    background-image: url(../img/milk.jpg);
+}
+.yogurt{
+    background-image: url(../img/yogurt.jpg);
+}
+.kefir{
+    background-image: url(../img/kefir.jpg);
+}
+.cream{
+    background-image: url(../img/cream.jpg);
+}
+.product:hover,
+.product:focus-within{
+    transform: scale(1.05);
+}
+
+.product-content{
+    --padding: 1.5rem;
+    padding: var(--padding);
+    background: linear-gradient(
+        hsl(0 0% 0% / 0.01), 
+        hsl(20 0% 0% / 0.3) 20%,
+        hsl(0 0% 0% / 1)
+    );
+}
+
+.product-title::after{
+    content: "";
+    position: absolute;
+    height: 4px;
+    left: calc(var(--padding) * -1);
+    bottom: -2px;
+    width: 200px;
+    background-color: aqua;
+    transition: transform 300ms ease;
+    transform-origin: left;
+}
+.product-title{
+    position: relative;
+    width: max-content;
+    padding-bottom: 5px;
+}
+.product:hover .product-title::after,
+.product:focus-within .product-title::after{
+    transform: scaleX(1);
+}
+
+@media (hover){
+    .product-content{
+        transform: translateY(72%);
+        transition: transform 300ms ease;
+    }
+    .product:hover .product-content, .product:focus-within .product-content{
+        transform: translateY(0);
+        transition-delay: 300ms;
+    }
+    .product:focus-within .product-content{
+        transition-duration: 0ms;
+    }
+    .product-content *:not(.product-title){
+        opacity: 0;
+        transition: opacity 300ms linear;
+    }
+    .product:hover .product-content *:not(.product-title),
+    .product:focus-within .product-content *:not(.product-title){
+        opacity: 1;
+        transition-delay: 700ms;
+    }
+    
+    .product-title::after{
+        transform: scaleX(0);
+    }
+}
+
+.product-button{
+    cursor: pointer;
+    display: inline-block;
+    text-decoration: none;
+    color: hsl(0 0% 0% / 1);
+    background-color: aqua;
+    padding: 0.5em 1.25em;
+    border-radius: 0.25em;
+    font-weight: bold;
+}
+.product-button:hover,
+.product-button:focus{
+    background-color: white;
+}
+#product-item{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+}
+.section-heading{
+    margin-top: 20px;
+}
+#products-button{
+    height: 40px;
+    width: 150px;
+    border: 1px solid rgb(12, 201, 201);
+    background-origin: white;
+    border-radius: 20px;
+    color: rgb(12, 201, 201);
+    font-weight: bold;
+    transition: 500ms ease;
+    margin-top: 20px;
+}
+#products-button:hover{
+    background-color: rgb(12, 201, 201);
+    color: white;
 }
